--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
 
     <div class="flex campos">
-            <div class="ml-36 h-10">
+            <div class="ml-36 h-10 fiat" >
                 <label for="fiat" class="h-full flex items-center pl-4 w-40 text-sm font-medium text-gray-900 dark:text-white">Inversión FIAT</label>
                 <select id="fiat" class="bg-gray-50 w-48 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                     <option selected>Seleccione una opción</option>
