--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </header>
-    <main>
+      <main id="main"> 
 
 <div id="datos" class="flex campos ">
             <div class="ml-36 h-10 fiat" >
@@ -66,7 +66,7 @@
 
             <div>
                 <button id="boton" class="boton"   onclick="obtener()"> Cotizar </button>
-                                <!-- <p id="valor"> este es el resultado </p> -->
+                              
             </div>
         </div>
         <p id="fecha" class="fecha"></p>
